--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,7 @@ contact_note: >
 # -----------------------------------------------------------------------------
 
 google_analytics:  # your google-analytics ID (format: UA-XXXXXXXXX)
+ga4_analytics: G-NFLPQH6TKP #This is your GA4 measurement ID 
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
 google_site_verification:  # your google-site-verification ID (Google Search Console)
@@ -243,11 +244,11 @@ max_author_limit:
 # -----------------------------------------------------------------------------
 
 imagemagick:
-  enabled: true # enables responsive images for your site (recomended, see https://github.com/alshedivat/al-folio/issues/537)
-  widths:
-    - 480
-    - 800
-    - 1400
+  # enabled: true # enables responsive images for your site (recomended, see https://github.com/alshedivat/al-folio/issues/537)
+  # widths:
+    # - 480
+    # - 800
+    # - 1400
   input_directories:
     - assets/img/
   input_formats:
@@ -271,7 +272,8 @@ jekyll-diagrams:
 # Optional Features
 # -----------------------------------------------------------------------------
 
-enable_google_analytics:    false  # enables google analytics
+enable_google_analytics:  false  # enables google analytics
+enable_google_analytics4: true
 enable_panelbear_analytics: false  # enables panelbear analytics
 enable_google_verification: false  # enables google site verification
 enable_bing_verification:   false  # enables bing site verification
